Fix spacing between about text and pic

--- a/sass/_page-templates.scss
+++ b/sass/_page-templates.scss
@@ -274,10 +274,10 @@
 
 	.random-facts {
 		@include tablet {
-			margin-bottom: 30px;
+			margin-bottom: 10px;
 		}
 		@include desktop {
-			margin-top: 70px;
+			margin-top: 35px;
 		}
 		.fact-list {
 			margin: 0px;
@@ -292,7 +292,7 @@
 			margin: 0;
 		}
 		@include desktop {
-			width: 75%;
+			width: 50%;
 		}
 	}
 }
@@ -300,7 +300,7 @@
 //skill-bar-graph
 .skills-container {
 	h2 {
-		@include tablet {
+		@include desktop {
 			margin-top: 0;
 		}
 	}
@@ -404,7 +404,6 @@
 		&:hover {
 			opacity: 1;
 			cursor: pointer;
-
 		}
 
 		@include tablet {
